Fixed jump button height

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -18,7 +18,7 @@
 
   .button-jump-top {
     font-size: 23px;
-    line-height: 1.1;
+    line-height: 1;
     padding-top: 1px;
   }
 }
